fix second row left column shrinking, prevent it from shifting by checking for border movement

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 img {
@@ -25,7 +25,7 @@ html, body {
     align-items: center;
     column-gap: 450px;
     background-color: #1F2937;
-    padding: 10px;
+    padding: 0px;
     padding-left: 100px;
     padding-right: 100px;
     margin-left: -10px;
@@ -75,13 +75,14 @@ html, body {
     padding-left: 100px;
     padding-right: 100px;
     padding-top: 80px;
+    padding-bottom: 30px;
 }
 
 .second_row_left_column {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 500px;
+    width: 475px;
 }
 
 .second_row_left_column .main_text {
@@ -126,6 +127,7 @@ html, body {
 
 .second_row_right_column img {
     margin: 10px;
+    margin-top: 15px;
     width: 548px;
     height: 240px;
     margin-bottom: 110px;
